--- a/core/src/components/datetime/datetime.ios.scss
+++ b/core/src/components/datetime/datetime.ios.scss
@@ -307,6 +307,14 @@
   scrollbar-width: none;
 
   height: 200px;
+
+  outline: none;
+}
+
+@media (any-hover: hover) {
+  :host .datetime-picker-col:focus {
+    background: current-color(base, 0.2);
+  }
 }
 
 /**
