--- a/core/src/components/datetime/test/demo/index.html
+++ b/core/src/components/datetime/test/demo/index.html
@@ -243,11 +243,11 @@
           </ion-item>
         </div>
 
-        <ion-datetime max="2023-10-15" min="2015-07-04">
+        <ion-datetime show-default-title="true" show-default-buttons="true" max="2023-10-15" min="2015-07-04">
           <span slot="title">Select Date</span>
           <ion-buttons slot="buttons">
-            <ion-button color="primary">Cancel</ion-button>
-            <ion-button color="primary">Ok</ion-button>
+            <ion-button color="primary">Cancel123</ion-button>
+            <ion-button color="primary">Ok123</ion-button>
           </ion-buttons>
         </ion-datetime>
       </ion-content>
