clean up default title

--- a/core/src/components/datetime/test/demo/index.html
+++ b/core/src/components/datetime/test/demo/index.html
@@ -11,23 +11,12 @@
     <script type="module" src="../../../../../dist/ionic/ionic.esm.js"></script>
     <style>
       ion-datetime {
-        position: fixed;
-
         margin: 0 auto;
 
-        top: 50%;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        transform: translateY(-50%);
-
         overflow: hidden;
-
       }
 
       ion-datetime.md {
-        height: 562px;
-
         border-radius: 4px;
 
         box-shadow: 0px 16px 32px rgba(0, 0, 0, 0.25), 0px 8px 16px rgba(0, 0, 0, 0.25);
@@ -42,8 +31,6 @@
       }
 
       ion-datetime.ios {
-        height: 440px;
-
         border-radius: 12px;
       }
 
@@ -213,43 +200,51 @@
   <body>
     <ion-app>
       <ion-content>
-        <div style="display: flex; justify-content: center">
-          <ion-item lines="none">
-            <ion-label>Dark Mode</ion-label>
-            <ion-checkbox slot="end"></ion-checkbox>
-          </ion-item>
-          <ion-item lines="none" detail="true" href="?ionic:mode=ios">
-            <ion-label>iOS Mode</ion-label>
-          </ion-item>
-          <ion-item lines="none" detail="true" href="?ionic:mode=md">
-            <ion-label>MD Mode</ion-label>
-          </ion-item>
+        <ion-button id="popover-trigger">Options</ion-button>
 
-          <ion-item lines="none">
-            <ion-label>Locale</ion-label>
-            <ion-input placeholder="default" id="locale"></ion-input>
-          </ion-item>
+        <ion-popover trigger="popover-trigger">
+          <ion-list lines="none">
+            <ion-item>
+              <ion-label>Dark Mode</ion-label>
+              <ion-checkbox slot="end"></ion-checkbox>
+            </ion-item>
+            <ion-item detail="true" href="?ionic:mode=ios">
+              <ion-label>iOS Mode</ion-label>
+            </ion-item>
+            <ion-item detail="true" href="?ionic:mode=md">
+              <ion-label>MD Mode</ion-label>
+            </ion-item>
 
-          <ion-item lines="none">
-            <ion-label>Color</ion-label>
-            <ion-select id="color" value="primary">
-              <ion-select-option value="primary">Primary</ion-select-option>
-              <ion-select-option value="secondary">Secondary</ion-select-option>
-              <ion-select-option value="tertiary">Tertiary</ion-select-option>
-              <ion-select-option value="success">Success</ion-select-option>
-              <ion-select-option value="warning">Warning</ion-select-option>
-              <ion-select-option value="danger">Danger</ion-select-option>
-            </ion-select>
-          </ion-item>
-        </div>
+            <ion-item>
+              <ion-label>Show Default Title</ion-label>
+              <ion-toggle id="titleToggle"></ion-toggle>
+            </ion-item>
 
-        <ion-datetime show-default-title="true" show-default-buttons="true" max="2023-10-15" min="2015-07-04">
-          <span slot="title">Select Date</span>
-          <ion-buttons slot="buttons">
-            <ion-button color="primary">Cancel123</ion-button>
-            <ion-button color="primary">Ok123</ion-button>
-          </ion-buttons>
-        </ion-datetime>
+            <ion-item>
+              <ion-label>Show Default Buttons</ion-label>
+              <ion-toggle id="buttonsToggle"></ion-toggle>
+            </ion-item>
+
+            <ion-item>
+              <ion-label>Locale</ion-label>
+              <ion-input placeholder="default" id="locale"></ion-input>
+            </ion-item>
+
+            <ion-item>
+              <ion-label>Color</ion-label>
+              <ion-select id="color" value="primary">
+                <ion-select-option value="primary">Primary</ion-select-option>
+                <ion-select-option value="secondary">Secondary</ion-select-option>
+                <ion-select-option value="tertiary">Tertiary</ion-select-option>
+                <ion-select-option value="success">Success</ion-select-option>
+                <ion-select-option value="warning">Warning</ion-select-option>
+                <ion-select-option value="danger">Danger</ion-select-option>
+              </ion-select>
+            </ion-item>
+          </ion-list>
+        </ion-popover>
+
+        <ion-datetime></ion-datetime>
       </ion-content>
     </ion-app>
     <script>
@@ -257,6 +252,8 @@
       const locale = document.querySelector('#locale');
       const datetime = document.querySelector('ion-datetime');
       const buttons = document.querySelectorAll('ion-button');
+      const titleToggle = document.querySelector('#titleToggle');
+      const buttonsToggle = document.querySelector('#buttonsToggle');
       locale.addEventListener('ionBlur', (ev) => {
         const value = ev.target.value;
         datetime.locale = (!!value) ? value : 'default';
@@ -274,6 +271,13 @@
         buttons.forEach(button => {
           button.color = ev.target.value;
         })
+      })
+
+      titleToggle.addEventListener('ionChange', (ev) => {
+        datetime.showDefaultTitle = ev.detail.checked;
+      })
+      buttonsToggle.addEventListener('ionChange', (ev) => {
+        datetime.showDefaultButtons = ev.detail.checked;
       })
     </script>
   </body>
