--- a/core/src/components/item/item.md.vars.scss
+++ b/core/src/components/item/item.md.vars.scss
@@ -46,7 +46,7 @@ $item-md-border-bottom-width:               1px !default;
 $item-md-border-bottom-style:               solid !default;
 
 /// @prop - Border bottom color for the item when lines are displayed 
-$item-md-border-bottom-color:               #8f8f8f !default;
+$item-md-border-bottom-color:               $item-md-border-color !default;
 
 /// @prop - Border bottom for the item when lines are displayed
 $item-md-border-bottom:                     $item-md-border-bottom-width $item-md-border-bottom-style $item-md-border-color !default;
