--- a/core/src/components/item/item.scss
+++ b/core/src/components/item/item.scss
@@ -497,9 +497,9 @@ ion-ripple-effect {
   @include margin(0);
   @include padding(
     var(--padding-top),
-    calc(var(--ion-safe-area-right, 0px) + var(--inner-padding-end)),
+    var(--inner-padding-end),
     var(--padding-bottom),
-    calc(var(--padding-start) + var(--ion-safe-area-left, 0px))
+    var(--padding-start)
   );
   display: flex;
 
