lint, fix methods

--- a/core/src/components/datetime/test/basic/index.html
+++ b/core/src/components/datetime/test/basic/index.html
@@ -310,7 +310,7 @@
           // create component to open
           const element = document.createElement('div');
           element.innerHTML = `
-            <ion-datetime color="danger">
+            <ion-datetime show-default-buttons="true" color="danger">
               <span slot="title">Select Date</span>
             </ion-datetime>
           `;
