initial scroll for ios fixed

--- a/core/src/components/datetime/datetime.scss
+++ b/core/src/components/datetime/datetime.scss
@@ -28,15 +28,30 @@
   flex-flow: column;
 
   background: var(--background);
+
+  width: 100%;
+  height: 100%;
 }
 
 :host .calendar-body,
-:host .time-column {
+:host .time-column,
+:host .datetime-year {
   opacity: 0;
+}
+
+:host(:not(.datetime-ready)) .datetime-year {
+  position: absolute;
+  pointer-events: none;
 }
 
 :host(.datetime-ready) .calendar-body,
 :host(.datetime-ready) .time-column {
+  opacity: 1;
+}
+
+:host(.datetime-ready) .datetime-year {
+  display: none;
+
   opacity: 1;
 }
 
@@ -58,12 +73,6 @@
   flex: 1 1 auto;
 
   flex-flow: column;
-}
-
-// Month and Year Switch
-// -----------------------------------
-:host .datetime-year {
-  display: none;
 }
 
 :host(.show-month-and-year) .datetime-year {
