--- a/core/src/components/datetime/test/basic/index.html
+++ b/core/src/components/datetime/test/basic/index.html
@@ -32,6 +32,11 @@
         }
       }
 
+      ion-popover.md {
+        --width: 330px;
+        --height: 560px;
+      }
+
       /*
        * Dark Colors
        * -------------------------------------------
