--- a/core/src/components/item/item.md.scss
+++ b/core/src/components/item/item.md.scss
@@ -363,6 +363,10 @@
   --inner-padding-start: 16px;
 }
 
+:host(.item-fill-outline.item-shape-round) .item-bottom {
+  @include padding-horizontal(32px, null);
+}
+
 // Material Design Item: Highlight and Notched Outline
 // --------------------------------------------------
 
@@ -386,12 +390,15 @@
 }
 
 :host(.item-fill-outline.item-has-focus.show-notch) .item-native .item-highlight {
+  border-width: var(--highlight-height);
+}
+
+:host(.item-fill-outline.item-has-focus.show-notch) .item-native .item-highlight,
+:host(.item-fill-outline.item-has-value.show-notch) .item-native .item-highlight {
   --slotted-label-left: calc(var(--padding-start) - var(--notch-padding) + var(--inner-padding-start));
   --slotted-label-right: calc(var(--slotted-label-left) + calc(var(--label-computed-width) * .75) + calc(var(--notch-padding) * 2));
   --slotted-label-top: 0px;
   --slotted-label-bottom: calc(var(--label-computed-height) / 2);
-
-  border-width: var(--highlight-height);
 
   // Clips out a rectangle from behind the slotted ion-label
   clip-path: polygon(0% 0%, 0% 100%, var(--slotted-label-left) 100%, var(--slotted-label-left) var(--slotted-label-top), var(--slotted-label-right) var(--slotted-label-top), var(--slotted-label-right) var(--slotted-label-bottom), var(--slotted-label-left) var(--slotted-label-bottom), var(--slotted-label-left) 100%, 100% 100%, 100% 0%);
