--- a/core/src/components/item/test/fill/index.html
+++ b/core/src/components/item/test/fill/index.html
@@ -29,13 +29,17 @@
             <ion-item fill="solid">
               <ion-label position="floating">Standard</ion-label>
               <ion-input></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
+              <ion-note slot="error">Error Text</ion-note>
             </ion-item>
           </ion-col>
           <ion-col>
             <ion-item fill="solid">
               <ion-icon slot="start" name="calendar-clear-outline"></ion-icon>
               <ion-label position="floating">Standard</ion-label>
-              <ion-input></ion-input>
+              <ion-input value="Has Initial Value"></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
+              <ion-note slot="error">Error Text</ion-note>
             </ion-item>
           </ion-col>
           <ion-col>
@@ -43,6 +47,34 @@
               <ion-label position="floating">Standard</ion-label>
               <ion-icon slot="end" name="trash"></ion-icon>
               <ion-input></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-item class="ion-invalid" fill="solid">
+              <ion-label position="floating">Standard</ion-label>
+              <ion-input></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
+              <ion-note slot="error">Error Text</ion-note>
+            </ion-item>
+          </ion-col>
+          <ion-col>
+            <ion-item class="ion-invalid" fill="solid">
+              <ion-icon slot="start" name="calendar-clear-outline"></ion-icon>
+              <ion-label position="floating">Standard</ion-label>
+              <ion-input value="Has Initial Value"></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
+              <ion-note slot="error">Error Text</ion-note>
+            </ion-item>
+          </ion-col>
+          <ion-col>
+            <ion-item class="ion-invalid" fill="solid">
+              <ion-label position="floating">Standard</ion-label>
+              <ion-icon slot="end" name="trash"></ion-icon>
+              <ion-input></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -55,13 +87,15 @@
             <ion-item fill="solid" shape="round">
               <ion-label position="floating">Standard</ion-label>
               <ion-input></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
             </ion-item>
           </ion-col>
           <ion-col>
             <ion-item fill="solid" shape="round">
               <ion-icon slot="start" name="calendar-clear-outline"></ion-icon>
               <ion-label position="floating">Standard</ion-label>
-              <ion-input></ion-input>
+              <ion-input value="Has Initial Value"></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
           </ion-item>
           </ion-col>
           <ion-col>
@@ -69,6 +103,34 @@
               <ion-label position="floating">Standard</ion-label>
               <ion-icon slot="end" name="trash"></ion-icon>
               <ion-input></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-item class="ion-invalid" fill="solid" shape="round">
+              <ion-label position="floating">Standard</ion-label>
+              <ion-input></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
+              <ion-note slot="error">Error Text</ion-note>
+            </ion-item>
+          </ion-col>
+          <ion-col>
+            <ion-item class="ion-invalid" fill="solid" shape="round">
+              <ion-icon slot="start" name="calendar-clear-outline"></ion-icon>
+              <ion-label position="floating">Standard</ion-label>
+              <ion-input value="Has Initial Value"></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
+              <ion-note slot="error">Error Text</ion-note>
+          </ion-item>
+          </ion-col>
+          <ion-col>
+            <ion-item class="ion-invalid" fill="solid" shape="round">
+              <ion-label position="floating">Standard</ion-label>
+              <ion-icon slot="end" name="trash"></ion-icon>
+              <ion-input></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -81,13 +143,15 @@
             <ion-item fill="outline">
               <ion-label position="floating">Standards</ion-label>
               <ion-input></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
             </ion-item>
           </ion-col>
           <ion-col>
             <ion-item fill="outline">
               <ion-icon slot="start" name="calendar-clear-outline"></ion-icon>
               <ion-label position="floating">Standard</ion-label>
-              <ion-input></ion-input>
+              <ion-input value="Has Initial Value"></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
             </ion-item>
           </ion-col>
           <ion-col>
@@ -95,6 +159,34 @@
               <ion-label position="floating">Standard</ion-label>
               <ion-icon slot="end" name="trash"></ion-icon>
               <ion-input></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-item class="ion-invalid" fill="outline">
+              <ion-label position="floating">Standards</ion-label>
+              <ion-input></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
+              <ion-note slot="error">Error Text</ion-note>
+            </ion-item>
+          </ion-col>
+          <ion-col>
+            <ion-item class="ion-invalid" fill="outline">
+              <ion-icon slot="start" name="calendar-clear-outline"></ion-icon>
+              <ion-label position="floating">Standard</ion-label>
+              <ion-input value="Has Initial Value"></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
+              <ion-note slot="error">Error Text</ion-note>
+            </ion-item>
+          </ion-col>
+          <ion-col>
+            <ion-item class="ion-invalid" fill="outline">
+              <ion-label position="floating">Standard</ion-label>
+              <ion-icon slot="end" name="trash"></ion-icon>
+              <ion-input></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -107,13 +199,15 @@
             <ion-item fill="outline" shape="round">
               <ion-label position="floating">Standard</ion-label>
               <ion-input></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
             </ion-item>
           </ion-col>
           <ion-col>
             <ion-item fill="outline" shape="round">
               <ion-icon slot="start" name="calendar-clear-outline"></ion-icon>
               <ion-label position="floating">Standard</ion-label>
-              <ion-input></ion-input>
+              <ion-input value="Has Initial Value"></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
             </ion-item>
           </ion-col>
           <ion-col>
@@ -121,9 +215,37 @@
               <ion-label position="floating">Standard</ion-label>
               <ion-icon slot="end" name="trash"></ion-icon>
               <ion-input></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
             </ion-item>
           </ion-col>
-      </ion-row>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-item class="ion-invalid" fill="outline" shape="round">
+              <ion-label position="floating">Standard</ion-label>
+              <ion-input></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
+              <ion-note slot="error">Error Text</ion-note>
+            </ion-item>
+          </ion-col>
+          <ion-col>
+            <ion-item class="ion-invalid" fill="outline" shape="round">
+              <ion-icon slot="start" name="calendar-clear-outline"></ion-icon>
+              <ion-label position="floating">Standard</ion-label>
+              <ion-input value="Has Initial Value"></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
+              <ion-note slot="error">Error Text</ion-note>
+            </ion-item>
+          </ion-col>
+          <ion-col>
+            <ion-item class="ion-invalid" fill="outline" shape="round">
+              <ion-label position="floating">Standard</ion-label>
+              <ion-icon slot="end" name="trash"></ion-icon>
+              <ion-input></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
+            </ion-item>
+          </ion-col>
+        </ion-row>
       </ion-grid>
 
       <p>Input Without Label</p>
@@ -132,16 +254,43 @@
           <ion-col>
             <ion-item fill="solid">
               <ion-input></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
             </ion-item>
           </ion-col>
           <ion-col>
             <ion-item fill="outline">
-              <ion-input></ion-input>
+              <ion-input value="Has Initial Value"></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
             </ion-item>
           </ion-col>
           <ion-col>
             <ion-item fill="outline" shape="round">
               <ion-input></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
+      <p>Input With Character Counter</p>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-item fill="solid" counter="true">
+              <ion-input maxlength="10"></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
+            </ion-item>
+          </ion-col>
+          <ion-col>
+            <ion-item fill="outline" counter="true">
+              <ion-input value="Has Initial Value" maxlength="20"></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
+            </ion-item>
+          </ion-col>
+          <ion-col>
+            <ion-item fill="outline" shape="round" counter="true">
+              <ion-input maxlength="10"></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -154,29 +303,48 @@
             <ion-item disabled fill="solid">
               <ion-label position="floating">Standard</ion-label>
               <ion-input></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
             </ion-item>
           </ion-col>
           <ion-col>
             <ion-item disabled fill="outline">
               <ion-label position="floating">Standard</ion-label>
-              <ion-input></ion-input>
+              <ion-input value="Has Initial Value"></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
             </ion-item>
           </ion-col>
           <ion-col>
             <ion-item disabled fill="outline" shape="round">
               <ion-label position="floating">Standard</ion-label>
               <ion-input></ion-input>
+              <ion-note slot="helper">Helper Text</ion-note>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-item disabled fill="solid" counter="true">
+              <ion-label position="floating">Standard</ion-label>
+              <ion-textarea maxlength="100"></ion-textarea>
+              <ion-note slot="helper">Helper Text</ion-note>
+            </ion-item>
+          </ion-col>
+          <ion-col>
+            <ion-item disabled fill="outline" counter="true">
+              <ion-label position="floating">Standard</ion-label>
+              <ion-textarea value="Has Initial Value" maxlength="100"></ion-textarea>
+              <ion-note slot="helper">Helper Text</ion-note>
+            </ion-item>
+          </ion-col>
+          <ion-col>
+            <ion-item disabled fill="outline" shape="round" counter="true">
+              <ion-label position="floating">Standard</ion-label>
+              <ion-textarea maxlength="100"></ion-textarea>
+              <ion-note slot="helper">Helper Text</ion-note>
             </ion-item>
           </ion-col>
         </ion-row>
       </ion-grid>
-
-      <!-- TODO others -->
-
-      <p>Custom Input</p>
-      <ion-item class="custom" fill="solid">
-        <ion-input placeholder="Standard"></ion-input>
-      </ion-item>
 
       <p>Textarea</p>
       <ion-grid>
@@ -184,36 +352,70 @@
           <ion-col>
             <ion-item fill="solid">
               <ion-textarea></ion-textarea>
+              <ion-note slot="helper">Helper Text</ion-note>
             </ion-item>
           </ion-col>
           <ion-col>
             <ion-item fill="outline">
-              <ion-textarea></ion-textarea>
+              <ion-textarea value="Has Initial Value"></ion-textarea>
+              <ion-note slot="helper">Helper Text</ion-note>
             </ion-item>
           </ion-col>
           <ion-col>
             <ion-item fill="outline" shape="round">
               <ion-textarea></ion-textarea>
+              <ion-note slot="helper">Helper Text</ion-note>
             </ion-item>
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col>
-            <ion-item fill="solid">
+            <ion-item fill="solid" counter="true">
               <ion-label position="floating">Standard</ion-label>
-              <ion-textarea></ion-textarea>
+              <ion-textarea maxlength="100"></ion-textarea>
+              <ion-note slot="helper">Helper Text</ion-note>
+              <ion-note slot="error">Error Text</ion-note>
             </ion-item>
           </ion-col>
           <ion-col>
-            <ion-item fill="outline">
+            <ion-item fill="outline" counter="true">
               <ion-label position="floating">Standard</ion-label>
-              <ion-textarea></ion-textarea>
+              <ion-textarea maxlength="100" value="Has Initial Value"></ion-textarea>
+              <ion-note slot="helper">Helper Text</ion-note>
+              <ion-note slot="error">Error Text</ion-note>
             </ion-item>
           </ion-col>
           <ion-col>
-            <ion-item fill="outline" shape="round">
+            <ion-item fill="outline" shape="round" counter="true">
               <ion-label position="floating">Standard</ion-label>
-              <ion-textarea></ion-textarea>
+              <ion-textarea maxlength="100"></ion-textarea>
+              <ion-note slot="helper">Helper Text</ion-note>
+              <ion-note slot="error">Error Text</ion-note>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-item class="ion-invalid" fill="solid" counter="true">
+              <ion-label position="floating">Standard</ion-label>
+              <ion-textarea maxlength="100"></ion-textarea>
+              <ion-note slot="helper">Helper Text</ion-note>
+              <ion-note slot="error">Error Text</ion-note>
+            </ion-item>
+          </ion-col>
+          <ion-col>
+            <ion-item class="ion-invalid" fill="outline" counter="true">
+              <ion-label position="floating">Standard</ion-label>
+              <ion-textarea maxlength="100" value="Has Initial Value"></ion-textarea>
+              <ion-note slot="helper">Helper Text</ion-note>
+              <ion-note slot="error">Error Text</ion-note>
+            </ion-item>
+          </ion-col>
+          <ion-col>
+            <ion-item class="ion-invalid" fill="outline" shape="round" counter="true">
+              <ion-label position="floating">Standard</ion-label>
+              <ion-textarea maxlength="100"></ion-textarea>
+              <ion-note slot="helper">Helper Text</ion-note>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -221,16 +423,6 @@
 
     </ion-content>
   </ion-app>
-
-  <style>
-    .custom {
-      --background: red;
-      --highlight-height: 4px;
-      --background-focused: red;
-      --border-color: red;
-      --highlight-color-focused: green;
-    }
-  </style>
 </body>
 
 </html>
