hour and minute values working

--- a/core/src/components/datetime/test/values/index.html
+++ b/core/src/components/datetime/test/values/index.html
@@ -42,7 +42,7 @@
         <div class="grid">
           <div class="grid-item">
             <h2>Hour and Minute Values</h2>
-            <ion-datetime minute-values="0,15,30,59"></ion-datetime>
+            <ion-datetime hour-values="1,2,3" minute-values="0,15,30,59"></ion-datetime>
           </div>
         </div>
       </ion-content>
