implement day values

--- a/core/src/components/datetime/test/values/index.html
+++ b/core/src/components/datetime/test/values/index.html
@@ -43,9 +43,10 @@
           <div class="grid-item">
             <h2>Values</h2>
             <ion-datetime
+              day-values="1,2,3,4,5"
               hour-values="1,2,3"
               minute-values="0,15,30,59"
-              year-values="2010,2015,2020,2025"
+              year-values="2010,2015,2020,2021,2025"
               month-values="5,6,10"
             ></ion-datetime>
           </div>
